--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/Checkout.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/Checkout.razor
@@ -2,29 +2,70 @@
 @inject HttpClient HttpClient
 @inject OrderState OrderState
 @inject NavigationManager NavigationManager
+@inject IJSRuntime JSRuntime
 
 <div class="main">
-    <EditForm Model="@OrderState.Order.DeliveryAddress" OnValidSubmit="@PlaceOrder">
-        <div class="checkout-cols">
-            <div class="checkout-order-details">
-                <h4>Review order</h4>
-                <OrderReview Order="OrderState.Order" />
-            </div>
-            <div class="checkout-delivery-address">
-                <h4>Deliver to...</h4>
-                <AddressEditor Address="@OrderState.Order.DeliveryAddress" />
-            </div>
-        </div>
+    <AuthorizeView Context="authContext">
+        <NotAuthorized>
+            <h2>Redirecting you...</h2>
+        </NotAuthorized>
+        <Authorized>
+            <EditForm Model="@OrderState.Order.DeliveryAddress" OnValidSubmit="@PlaceOrder">
+                <div class="checkout-cols">
+                    <div class="checkout-order-details">
+                        <h4>Review order</h4>
+                        <OrderReview Order="OrderState.Order" />
+                    </div>
+                    <div class="checkout-delivery-address">
+                        <h4>Deliver to...</h4>
+                        <AddressEditor Address="@OrderState.Order.DeliveryAddress" />
+                    </div>
+                </div>
 
-        <button class="checkout-button btn btn-warning" type="submit" disabled="@(isSubmitting)">
-            Place order
-        </button>
+                <button class="checkout-button btn btn-warning" type="submit" disabled="@(isSubmitting)">
+                    Place order
+                </button>
 
-        <DataAnnotationsValidator />
-    </EditForm>
+                <DataAnnotationsValidator />
+            </EditForm>
+        </Authorized>
+    </AuthorizeView>
 </div>
 
 @code {
+
+    [CascadingParameter] Task<AuthenticationState> AuthenticationStateTask { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await AuthenticationStateTask;
+        if (!authState.User.Identity.IsAuthenticated)
+        {
+            await LocalStorage.SetAsync(JSRuntime, "currentorder", OrderState.Order);
+            // The server won't accept orders from unauthenticated users, so avoid
+            // an error by making them log in at this point
+            NavigationManager.NavigateTo("user/signin?redirectUri=/checkout", true);
+        }
+
+        // Try to recover any temporary saved order
+        if (!OrderState.Order.Pizzas.Any())
+        {
+            var savedOrder = await LocalStorage.GetAsync<Order>(JSRuntime, "currentorder");
+            if (savedOrder != null)
+            {
+                OrderState.ReplaceOrder(savedOrder);
+                await LocalStorage.DeleteAsync(JSRuntime, "currentorder");
+            }
+            else
+            {
+                // There's nothing check out - go to home
+                NavigationManager.NavigateTo("");
+            }
+        }
+    }
+
+    // Leave PlaceOrder unchanged here
+
     bool isSubmitting;
     async Task PlaceOrder()
     {
