--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
@@ -1,5 +1,6 @@
 ﻿@page "/myorders/{orderId:int}"
 @using System.Threading
+@attribute [Authorize]
 @inject HttpClient HttpClient
 @implements IDisposable
 
