completed 08-templated-components

--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/Index.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/Index.razor
@@ -20,10 +20,9 @@
             }
         }
     </ul>
-    @if (OrderState.ShowingConfigureDialog)
-    {
+    <TemplatedDialog Show="OrderState.ShowingConfigureDialog">
         <ConfigurePizzaDialog Pizza="OrderState.ConfiguringPizza" OnCancel="OrderState.CancelConfigurePizzaDialog" OnConfirm="OrderState.ConfirmConfigurePizzaDialog" />
-    }
+    </TemplatedDialog>
 </div>
 
 <div class="sidebar">
