Added function to edit existing pizzas

--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/Index.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/Index.razor
@@ -21,7 +21,7 @@
         }
     </ul>
     <TemplatedDialog Show="OrderState.ShowingConfigureDialog">
-        <ConfigurePizzaDialog Pizza="OrderState.ConfiguringPizza" OnCancel="OrderState.CancelConfigurePizzaDialog" OnConfirm="OrderState.ConfirmConfigurePizzaDialog" />
+        <ConfigurePizzaDialog Pizza="OrderState.ConfiguringPizza" EditExisting="OrderState.EditExistingPizza" OnCancel="OrderState.CancelConfigurePizzaDialog" OnConfirm="OrderState.ConfirmConfigurePizzaDialog" />
     </TemplatedDialog>
 </div>
 
@@ -33,7 +33,7 @@
 
             @foreach (var configuredPizza in OrderState.Order.Pizzas)
             {
-                <ConfiguredPizzaItem Pizza="configuredPizza" OnRemoved="@(() => RemovePizza(configuredPizza))" />
+                <ConfiguredPizzaItem Pizza="configuredPizza" OnRemoved="@(() => RemovePizza(configuredPizza))" OnEdit="@(() => EditPizza(configuredPizza))"/>
             }
         </div>
     }
@@ -64,5 +64,11 @@
         {
             OrderState.RemoveConfiguredPizza(configuredPizza);
         }
+    }
+
+    void EditPizza(Pizza configuredPizza)
+    {
+        OrderState.RemoveConfiguredPizza(configuredPizza);
+        OrderState.ShowEditPizzaDialog(configuredPizza);
     }
 }
