--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/ConfigurePizzaDialog.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/ConfigurePizzaDialog.razor
@@ -1,4 +1,5 @@
-﻿@inject HttpClient HttpClient
+﻿@using System.Reflection
+@inject HttpClient HttpClient
 
 
 <div class="dialog-title">
@@ -55,7 +56,7 @@
     </div>
 </form>
 <div class="dialog-buttons">
-    <button class="btn btn-secondary mr-auto" @onclick="@OnCancel">Cancel</button>
+    <button class="btn @CancelButtonType mr-auto" @onclick="@OnCancel">@CancelButtonCaption</button>
     <span class="mr-center">
         Price: <span class="price">@(Pizza.GetFormattedTotalPrice())</span>
     </span>
@@ -67,13 +68,20 @@
     List<Topping> toppings;
 
     [Parameter] public Pizza Pizza { get; set; }
+    [Parameter] public bool EditExisting { get; set; }
     [Parameter] public EventCallback OnCancel { get; set; }
     [Parameter] public EventCallback OnConfirm { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
-        toppings = await HttpClient.GetJsonAsync<List<Topping>>("toppings");
+    toppings = await HttpClient.GetJsonAsync<List<Topping>>("toppings");
     }
+
+    string CancelButtonCaption => EditExisting ?
+        "Remove" : "Cancel";
+
+    string CancelButtonType => EditExisting ?
+        "btn-danger" : "btn-secondary";
 
     void ToppingSelected(ChangeEventArgs e)
     {
