reverted async override on InitializeAsync

--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/ConfigurePizzaDialog.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/ConfigurePizzaDialog.razor
@@ -72,7 +72,7 @@
     [Parameter] public EventCallback OnCancel { get; set; }
     [Parameter] public EventCallback OnConfirm { get; set; }
 
-    protected async override Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
     {
     toppings = await HttpClient.GetJsonAsync<List<Topping>>("toppings");
     }
