Cancel unnecessary polling - sync with PR
Sync with PR https://github.com/dotnet-presentations/blazor-workshop/pull/183/commits/1034b8fd8714467f5843cd1473403ca425060668

1. Cancel unnecessary polling when order status text is "Delivered"

--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
@@ -75,6 +75,11 @@
 
             StateHasChanged();
 
+            if (orderWithStatus.StatusText == "Delivered")
+            {
+                pollingCancellationToken.Cancel();               
+            }
+                    
             await Task.Delay(4000);
         }
     }
