--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/MyOrders.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/MyOrders.razor
@@ -3,7 +3,7 @@
 @inject HttpClient HttpClient
 
 <div class="main">
-    <TemplatedList Loader="@LoadOrders" ListGroupClass="orders-list">
+    <TemplatedList Loader="LoadOrders" ListGroupClass="orders-list">
         <Loading>Loading...</Loading>
         <Empty>
             <h2>No orders placed</h2>
