--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
@@ -28,7 +28,7 @@
             <div class="track-order-body">
                 <div class="track-order-body">
                     <div class="track-order-details">
-                        <OrderReview Order="@orderWithStatus.Order" />
+                        <OrderReview Order="orderWithStatus.Order" />
 
                     </div>
                     <div class="track-order-map">
@@ -77,9 +77,9 @@
 
             if (orderWithStatus.StatusText == "Delivered")
             {
-                pollingCancellationToken.Cancel();               
+                pollingCancellationToken.Cancel();
             }
-                    
+
             await Task.Delay(4000);
         }
     }
