cancel polling when pizza is delivered

--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/OrderDetails.razor
@@ -73,12 +73,12 @@
                 Console.Error.WriteLine(ex);
             }
 
-            StateHasChanged();
-
-            if (orderWithStatus.StatusText == "Delivered")
+            if (orderWithStatus.IsDelivered)
             {
                 pollingCancellationToken.Cancel();
             }
+
+            StateHasChanged();
 
             await Task.Delay(4000);
         }
